SERVER-11378 Remove dassert from client facing header